# vecmindb-sdk

./: .gitignore  LICENSE  README.md  release.py  release.sh
docs/: DEPLOYMENT_GUIDE.md  WHY_VECMINDB.md
examples/: 01_quickstart.py  02_cognitive_evolution.py  03_mcp_client.py  demo_ltsm_lifecycle.sh  inspect_db.py  python_langchain_demo.py  python_simple_demo.py  typescript_langchain_demo.ts  typescript_simple_demo.ts
python/: pyproject.toml
python/examples/: 01_quickstart.py  02_cognitive_evolution.py
python/tests/: test_client.py
python/vecmindb/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  mcp.py  mcp_server.py  memory.py  memory_plugin.py  models.py  retry.py
rust/: Cargo.toml
rust/src/: lib.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: 01_quickstart.ts
typescript/src/: auth.ts  client.ts  errors.ts  index.ts  langchain.ts  mcp.ts  memory.ts  models.ts  retry.ts
