[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecmindb-sdk"
version = "1.0.0"
description = "Python SDK for VecminDB - High-performance vector database HTTP client"
authors = [{email = "dev@vecmindb.com", name = "VecminDB Team"}]
license = {text = "MIT OR Apache-2.0"}
readme = "../../README.md"
requires-python = ">=3.8"
homepage = "https://vecmindb.io"
repository = "https://github.com/vecmindb/vecmindb"
documentation = "https://docs.rs/vecmindb"
keywords = ["vector-database", "similarity-search", "embedding", "sdk", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://vecmindb.io"
Repository = "https://github.com/vecmindb/vecmindb"
Documentation = "https://docs.rs/vecmindb"
Changelog = "https://github.com/vecmindb/vecmindb/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["vecmindb*"]
