[package]
name = "vecmindb"
version = "1.0.0"
edition = "2021"
description = "VecminDB - High-performance branded vector database client stub."
license = "MIT OR Apache-2.0"
homepage = "https://lingxinmind.com"
repository = "https://github.com/lingxinmind/vecminDB"
documentation = "https://lingxinmind.com/docs"
readme = "README.md"

[dependencies]
